feat: 添加旧梦剧照玩家端与动态故事简介
