# server/src/main/java/com/xiqian/draw/repository/StoryIntroRepository.java
@@ -1,0 +1,7 @@
+package com.xiqian.draw.repository;
+
+import com.xiqian.draw.domain.StoryIntro;
+import org.springframework.data.jpa.repository.JpaRepository;
+
+public interface StoryIntroRepository extends JpaRepository<StoryIntro, String> {
+}
